doc: update readme remove template, diary

--- a/netlify.toml
+++ b/netlify.toml
@@ -20,18 +20,18 @@ publish = "public"
 
 [build.environment]
 # (Optional) Text in landing page button
-LANDING_BUTTON = "Click to see more questionable ideas 👆"
+LANDING_BUTTON = "Click to see all of my posts 👆"
 # (Optional) Site description on landing page
-LANDING_DESCRIPTION = "Never do something in ten minutes if you can automate it in ten hours"
+LANDING_DESCRIPTION = ""
 # (REQUIRED) The Markdown page linked to landing page button (e.g. put home for ./home.md)
-LANDING_PAGE = "Readme"
+LANDING_PAGE = "README"
 # (Optional) Site title on landing page
-LANDING_TITLE = "🥔"
+LANDING_TITLE = ""
 PYTHON_VERSION = "3.8"
 # (REQUIRED) Site repo URL
 REPO_URL = "https://github.com/ValMystletainn/ob-notes"
 # (Optional) Site title in navbar
-SITE_TITLE = "an open sourced mind🧠"
+SITE_TITLE = "Blog of ValMystletainn"
 # (Optional) Site title in browser tab (leave blank to use SITE_TITLE)
 SITE_TITLE_TAB = ""
 # (REQUIRED) Netlify site URL
@@ -42,7 +42,7 @@ ZOLA_VERSION = "0.16.1"
 # (Optional, default title) How to sort notes inside each section on the right sidebar ("date" or "title"). Subsections on side bar are sorted by title, the sort order cannot be changed.
 SORT_BY = "title"
 # (Optional) Google Analytics Measurement ID
-GANALYTICS = "G-9EJCNPXBF6"
+GANALYTICS = ""
 # (Optional, default true) Slugify URLs. Put "" to disable.
 SLUGIFY = "y"
 # (Optional, default true) Shows knowledge graph on home page. Put "" to disable.
@@ -52,7 +52,7 @@ PAGE_GRAPH = "y"
 # (Optional, default true) Whether to use standard Markdown strict line breaks.
 STRICT_LINE_BREAKS = ""
 # (Optional, default false) Whether sidebar sections should be collapsed by default.
-SIDEBAR_COLLAPSED = ""
+SIDEBAR_COLLAPSED = "true"
 # (Optional, default blank) Additional footer content.
 FOOTER = ""
 # (Optional, default main) Root section name.
