--- a/netlify.toml
+++ b/netlify.toml
@@ -59,7 +59,7 @@ FOOTER = ""
 ROOT_SECTION_NAME = "Home"
 COMMENTS_GISCUSS = "y"
 EDIT_PAGE = "y"
-EDIT_PAGE_BUTTON_TEXT = "Change my mind!"
+EDIT_PAGE_BUTTON_TEXT = "PR to change this"
 LOCAL_GRAPH = "y"
 # (Optional) visjs graph options. Can remove if desired.
 GRAPH_OPTIONS = """
@@ -100,3 +100,24 @@ GRAPH_OPTIONS = """
 			},
         }
         """
+
+[[plugins]]
+package = "netlify-plugin-submit-sitemap"
+
+[plugins.inputs]
+
+# The base url of your site (optional, default = main URL set in Netlify)
+baseUrl = "https://valmystletainn-blog.netlify.app/"
+
+# Path to the sitemap URL (optional, default = /sitemap.xml)
+sitemapPath = "/sitemap.xml"
+
+# Time in seconds to not submit the sitemap after successful submission
+ignorePeriod = 0
+
+# Enabled providers to submit sitemap to (optional, default = 'google', 'bing', 'yandex'). Possible providers are currently only 'google', 'bing', 'yandex'.
+providers = [
+  "google",
+  "bing",
+  "yandex",
+]
